# timavc

./: .gitignore  Makefile.am  configure.ac  execute.sh
app/: Makefile.am  main.c
src/: Makefile.am  configure.ac
src/avc/: avc.c  avc.h  avc_core.c  avc_core.h  avc_demo.c  avc_demo.h  avc_typedef.h
src/support/: globals.c  globals.h  module_logger.c  module_logger.h  module_support.h
src/vmp/: vmp.h  vmp_log.h  vmp_typedef.h
